# Hisaab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 39d067c78511_initial_schema.py  7101073d1586_add_app_settings.py  888fecba73f9_shuttle_contributions_per_court_.py  d761c726619b_add_player_message_template.py  dcf0caf95930_add_player_is_self.py
app/: main.py  observability.py
app/api/: deps.py
app/api/routers/: players.py  players_html.py  sessions.py  sessions_html.py  settings_html.py  venues.py  venues_html.py
app/api/schemas/: player.py  session.py  venue.py
app/config/: settings.py
app/domain/: calculator.py  models.py  rounding.py
app/persistence/: _greenlet_stub.py  database.py  orm.py
app/persistence/repositories/: player.py  session.py  venue.py
app/services/: mapping.py  messaging.py  session_service.py
app/web/static/css/: tailwind.input.css
app/web/templates/: base.html
app/web/templates/partials/: slot_cell.html  slot_picker.html
app/web/templates/players/: form.html  list.html
app/web/templates/sessions/: list.html  new_court_count.html  new_courts.html  new_players.html  new_setup.html  new_shuttles.html  new_slots.html  result.html  review.html
app/web/templates/settings/: form.html
docker/: Dockerfile  casaos-compose.yml  docker-compose.yml  litestream.yml
docs/superpowers/plans/: 2026-04-29-badminton-splitter-plan.md
docs/superpowers/specs/: 2026-04-29-badminton-splitter-design.md
(+2 files in other folders)
